--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <p>
                   <span class="card-title"><a href="https://www.facebook.com/p/SMK-Dato-Jaafar-Johor-Bahru-Rasmi-100063971978404/?locale=ms_MY" target="_blank" class="teal-text hoverline">Dato' Jaafar High School</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Johor Bahru, Johor</p>
                 <p>
                   <b>Certificate: </b>The Malaysian Higher School Certificate (STPM)      
                   <br>
