--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </div>
   
           <div class="project-box">
-            <a href="https://example.com" class="project-container" target="_blank">
+            <a href="https://github.com/limin27/VR-CULINARY-ART-COURSES" class="project-container" target="_blank">
               <img src="/assets/VR.png" alt="Project Image" class="project-image">
               <div class="project-overlay">
                   <h2 class="project-title"> VR CULINARY ART COURSES</h2>
